Migrated to Ng material 15 and run the migration tool

--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -15,7 +15,7 @@
   </main>
 
   <aside>
-    <mat-card class="example-card" >
+    <mat-card appearance="outlined" class="example-card" >
       <mat-card-header>
         <mat-card-title>Log in</mat-card-title>
       </mat-card-header>
@@ -33,7 +33,7 @@
     </mat-card>
     <mat-divider></mat-divider>
 
-    <mat-card class="example-card">
+    <mat-card appearance="outlined" class="example-card">
       <mat-card-header>
         <mat-card-title>Register</mat-card-title>
       </mat-card-header>
