--- a/src/app/extrapages/chart01/chart01.component.html
+++ b/src/app/extrapages/chart01/chart01.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign = "space-aroundstart" fxLayoutGap="20px">
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Tasks for {{ date1 | date:'mediumDate'}}</mat-card-title>
     </mat-card-title-group>
@@ -8,7 +8,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>To Do List for {{ date1 | date:'mediumDate'}}</mat-card-title>
     </mat-card-title-group>
@@ -17,7 +17,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Current Mo. Summary As Of {{ date1 | date:'shortDate'}}</mat-card-title>
     </mat-card-title-group>
@@ -30,7 +30,7 @@
 
 
 <div fxLayout="row" fxLayoutAlign = "space-aroundstart" fxLayoutGap="20px">
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Bar Chart</mat-card-title>
     </mat-card-title-group>
@@ -39,7 +39,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Bubble Chart</mat-card-title>
     </mat-card-title-group>
@@ -48,7 +48,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Radar Chart</mat-card-title>
     </mat-card-title-group>
@@ -60,7 +60,7 @@
 </div>
 
 <div fxLayout="row" fxLayoutAlign = "space-aroundstart" fxLayoutGap="20px" >
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Apex Chart</mat-card-title>
     </mat-card-title-group>
@@ -69,7 +69,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Brush  Chart</mat-card-title>
     </mat-card-title-group>
@@ -78,7 +78,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Donut Chart</mat-card-title>
     </mat-card-title-group>
@@ -90,7 +90,7 @@
 </div>
 
 <div fxLayout="row" fxLayoutAlign = "space-aroundstart" fxLayoutGap="20px">
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Donut Monochrome Chart</mat-card-title>
     </mat-card-title-group>
@@ -99,7 +99,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Polar Area Chart</mat-card-title>
     </mat-card-title-group>
@@ -108,7 +108,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Multiple Y Axis Chart</mat-card-title>
     </mat-card-title-group>
