--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="space-around center">
 
-        <mat-card fxFlex="25"class='example-card'>
+        <mat-card appearance="outlined" fxFlex="25"class='example-card'>
             <mat-card-header>
             Air Import
             </mat-card-header>
@@ -10,7 +10,7 @@
             </mat-card-actions>
         </mat-card>
 
-        <mat-card fxFlex="25"class='example-card'>
+        <mat-card appearance="outlined" fxFlex="25"class='example-card'>
             <mat-card-header>
             Air Export
             </mat-card-header>
@@ -20,7 +20,7 @@
             </mat-card-actions>
         </mat-card>
 
-        <mat-card fxFlex="25"class='example-card'>
+        <mat-card appearance="outlined" fxFlex="25"class='example-card'>
             <mat-card-header>
             Ocean Import
             </mat-card-header>
@@ -30,7 +30,7 @@
             </mat-card-actions>
         </mat-card>
 
-        <mat-card fxFlex="25"class='example-card'>
+        <mat-card appearance="outlined" fxFlex="25"class='example-card'>
             <mat-card-header>
             Customs Brokerage
             </mat-card-header>
@@ -44,7 +44,7 @@
 
 <div fxLayout="row" fxLayoutAlign="space-around center">
    
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card appearance="outlined" fxFlex="25"class='example-card'>
         <mat-card-header>
             Importer Security Filing
         </mat-card-header>
@@ -54,7 +54,7 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card appearance="outlined" fxFlex="25"class='example-card'>
         <mat-card-header>
             Air AMS
         </mat-card-header>
@@ -64,7 +64,7 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card appearance="outlined" fxFlex="25"class='example-card'>
         <mat-card-header>
         Truck AMS
         </mat-card-header>
@@ -74,7 +74,7 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card appearance="outlined" fxFlex="25"class='example-card'>
         <mat-card-header>
         Ocean Export
         </mat-card-header>
@@ -89,7 +89,7 @@
 <div fxLayout="row" fxLayoutAlign="space-around center">
     
 
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card appearance="outlined" fxFlex="25"class='example-card'>
         <mat-card-header>
             Sea AMS
         </mat-card-header>
@@ -99,7 +99,7 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card appearance="outlined" fxFlex="25"class='example-card'>
         <mat-card-header>
             Trucking
         </mat-card-header>
@@ -109,7 +109,7 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card appearance="outlined" fxFlex="25"class='example-card'>
         <mat-card-header>
         Reports
         </mat-card-header>
@@ -119,7 +119,7 @@
         </mat-card-actions>
     </mat-card>
 
-    <mat-card fxFlex="25"class='example-card'>
+    <mat-card appearance="outlined" fxFlex="25"class='example-card'>
         <mat-card-header>
         Track And Trace
         </mat-card-header>
