--- a/src/app/pages/air-export/air-export-dashboard/air-export-dashboard.component.html
+++ b/src/app/pages/air-export/air-export-dashboard/air-export-dashboard.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="space-aroundstart" fxLayoutGap="40px">
-  <mat-card class="example-card g-5" fxFlex="30">
+  <mat-card appearance="outlined" class="example-card g-5" fxFlex="30">
     <mat-card-title-group>
       <mat-card-title
         >Tasks for {{ date1 | date: "mediumDate" }}</mat-card-title
@@ -10,7 +10,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card g-5" fxFlex="30">
+  <mat-card appearance="outlined" class="example-card g-5" fxFlex="30">
     <mat-card-title-group>
       <mat-card-title
         >To Do List for {{ date1 | date: "mediumDate" }}</mat-card-title
@@ -21,7 +21,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card g-5" fxFlex="30">
+  <mat-card appearance="outlined" class="example-card g-5" fxFlex="30">
     <mat-card-title-group>
       <mat-card-title
         >Current Mo. Summary As Of
@@ -37,7 +37,7 @@
 <br />
 <br />
 <div fxLayout="row" fxLayoutAlign="space-aroundstart" fxLayoutGap="40px">
-  <mat-card class="example-card" fxFlex="30">
+  <mat-card appearance="outlined" class="example-card" fxFlex="30">
     <mat-card-title-group>
       <mat-card-title
         >Tasks for {{ date1 | date: "mediumDate" }}</mat-card-title
@@ -48,7 +48,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30">
+  <mat-card appearance="outlined" class="example-card" fxFlex="30">
     <mat-card-title-group>
       <mat-card-title
         >To Do List for {{ date1 | date: "mediumDate" }}</mat-card-title
@@ -59,7 +59,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30">
+  <mat-card appearance="outlined" class="example-card" fxFlex="30">
     <mat-card-title-group>
       <mat-card-title
         >Current Mo. Summary As Of
