--- a/src/app/pages/customs-brokerage/customs-brokerage.component.html
+++ b/src/app/pages/customs-brokerage/customs-brokerage.component.html
@@ -15,19 +15,19 @@
 
     <mat-tab label="Dashboard">
       <div fxLayout="row" fxLayoutAlign="space-around center">
-        <mat-card fxFlex="30" class="example-card">
+        <mat-card appearance="outlined" fxFlex="30" class="example-card">
           <mat-card-header> List of Entries </mat-card-header>
           <mat-card-content>
             <app-entries-summary></app-entries-summary>
           </mat-card-content>
         </mat-card>
-        <mat-card fxFlex="30" class="example-card">
+        <mat-card appearance="outlined" fxFlex="30" class="example-card">
           <mat-card-header> Entries Under Exam </mat-card-header>
           <mat-card-content>
             <app-entries-summary></app-entries-summary>
           </mat-card-content>
         </mat-card>
-        <mat-card fxFlex="30" class="example-card">
+        <mat-card appearance="outlined" fxFlex="30" class="example-card">
           <mat-card-header> Entries with PGA Hold </mat-card-header>
           <mat-card-content>
             <app-entries-summary></app-entries-summary>
@@ -36,19 +36,19 @@
       </div>
 
       <div fxLayout="row" fxLayoutAlign="space-around center">
-        <mat-card fxFlex="30" class="example-card">
+        <mat-card appearance="outlined" fxFlex="30" class="example-card">
           <mat-card-header> Entries Past Arrival Dates </mat-card-header>
           <mat-card-content>
             <app-entries-summary></app-entries-summary>
           </mat-card-content>
         </mat-card>
-        <mat-card fxFlex="30" class="example-card">
+        <mat-card appearance="outlined" fxFlex="30" class="example-card">
           <mat-card-header> Duty Payments Due </mat-card-header>
           <mat-card-content>
             <app-entries-summary></app-entries-summary>
           </mat-card-content>
         </mat-card>
-        <mat-card fxFlex="30" class="example-card">
+        <mat-card appearance="outlined" fxFlex="30" class="example-card">
           <mat-card-header> Liquidated Entries </mat-card-header>
           <mat-card-content>
             <app-entries-summary></app-entries-summary>
