--- a/src/app/pages/isf/shipment/shipment.component.scss
+++ b/src/app/pages/isf/shipment/shipment.component.scss
@@ -13,7 +13,7 @@ td {
   padding-right: 8px;
 }
 
-.mat-radio-button ~ .mat-radio-button {
+.mat-mdc-radio-button ~ .mat-radio-button {
   margin-left: 16px;
 }
 
