--- a/src/app/pages/sea-ams/ams-detail/ams-detail.component.html
+++ b/src/app/pages/sea-ams/ams-detail/ams-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-<mat-card fxLayout='row' fxLayoutAlign = 'space-around center' style="background-color:lightblue">
+<mat-card appearance="outlined" fxLayout='row' fxLayoutAlign = 'space-around center' style="background-color:lightblue">
   <mat-card-header>
     <mat-card-title>Sea AMS Transaction No: </mat-card-title>
   </mat-card-header>
