--- a/src/app/extrapages/isf-form/isf-form.component.html
+++ b/src/app/extrapages/isf-form/isf-form.component.html
@@ -110,7 +110,7 @@
 <div class="container bg-warning">
 
   <div fxLayout="row" fxLayoutAlign="space-around center">
-    <mat-card fxFlex="30"  class="example-card">
+    <mat-card appearance="outlined" fxFlex="30"  class="example-card">
       <mat-card-header>
         Entries Past Arrival Dates
       </mat-card-header>
@@ -146,7 +146,7 @@
       </mat-card-content>
     </mat-card>
 
-    <mat-card fxFlex="30" class="example-card">
+    <mat-card appearance="outlined" fxFlex="30" class="example-card">
       <mat-card-header>
         Duty Payments Due
       </mat-card-header>
@@ -182,7 +182,7 @@
       </mat-card-content>
     </mat-card>
 
-    <mat-card fxFlex="30"  class="col example-card">
+    <mat-card appearance="outlined" fxFlex="30"  class="col example-card">
       <mat-card-header>
         Liquidated Entries
       </mat-card-header>
@@ -220,7 +220,7 @@
   </div>
 
   <div fxLayout="row" fxLayoutAlign="space-around center">
-    <mat-card fxFlex="30"class='example-card'>
+    <mat-card appearance="outlined" fxFlex="30"class='example-card'>
       <mat-card-header>
         Entries Past Arrival Dates
       </mat-card-header>
@@ -255,7 +255,7 @@
          </div>
       </mat-card-content>
     </mat-card>
-    <mat-card fxFlex="30"class='example-card'>
+    <mat-card appearance="outlined" fxFlex="30"class='example-card'>
       <mat-card-header>
         Duty Payments Due
       </mat-card-header>
@@ -291,7 +291,7 @@
       </mat-card-content>
 
     </mat-card>
-    <mat-card fxFlex="30"class='example-card'>
+    <mat-card appearance="outlined" fxFlex="30"class='example-card'>
       <mat-card-header>
         Liquidated Entries
       </mat-card-header>
