--- a/src/app/home/dashboard/dashboard.component.scss
+++ b/src/app/home/dashboard/dashboard.component.scss
@@ -9,6 +9,7 @@ body {
     margin: 10px 10px 10px 10px;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card-header {
   font-family: "Times New Roman", Times, serif;
   font-size: 2em ;
@@ -16,6 +17,7 @@ mat-card-header {
   margin: auto auto auto auto;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card-actions {
   display:block;
   margin-left: auto;
