--- a/src/app/home/navigation/navigation.component.scss
+++ b/src/app/home/navigation/navigation.component.scss
@@ -34,6 +34,7 @@ mat-sidenav {
   flex: 1 1 auto;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of menu that may no longer apply for the MDC version. */
 mat-menu-item {
   font-size: medium;
   padding: 8px 0;
