--- a/src/app/layouts/sidebar/sidebar.component.scss
+++ b/src/app/layouts/sidebar/sidebar.component.scss
@@ -5,18 +5,18 @@
   outline: none;
   width: 100%;
 
-  .mat-list-item.active {
+  .mat-mdc-list-item.active {
     background-color: yellowgreen;
   }
   &:hover,
   &:focus {
-    >.mat-list-item:not(.expanded) {
+    >.mat-mdc-list-item:not(.expanded) {
       background-color: ivory;
     }
   }
 }
 
-.mat-list-item {
+.mat-mdc-list-item {
   padding: 8px 0;
   display: flex;
   width: auto;
