--- a/src/app/pages/air-export/air-export-dashboard/air-export-dashboard.component.scss
+++ b/src/app/pages/air-export/air-export-dashboard/air-export-dashboard.component.scss
@@ -1,6 +1,7 @@
 // mat-card {
 //   padding: 50;
 // }
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 mat-card {
   margin: 20px;
   background-color: burlywood;
