--- a/src/app/pages/air-export/air-export.component.scss
+++ b/src/app/pages/air-export/air-export.component.scss
@@ -19,6 +19,7 @@ mat-form-field {
   margin-right: 10px;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card {
   margin: 20 20 20 20;
 }
