--- a/src/app/pages/air-import/air-import-dashboard/air-import-dashboard.component.html
+++ b/src/app/pages/air-import/air-import-dashboard/air-import-dashboard.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign = "space-aroundstart" fxLayoutGap="20px">
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Tasks for {{ date1 | date:'mediumDate'}}</mat-card-title>
     </mat-card-title-group>
@@ -8,7 +8,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>To Do List for {{ date1 | date:'mediumDate'}}</mat-card-title>
     </mat-card-title-group>
@@ -17,7 +17,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Current Mo. Summary As Of {{ date1 | date:'shortDate'}}</mat-card-title>
     </mat-card-title-group>
@@ -29,7 +29,7 @@
 </div>
 
 <div fxLayout="row" fxLayoutAlign = "space-aroundstart" fxLayoutGap="20px">
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Tasks for {{ date1 | date:'mediumDate'}}</mat-card-title>
     </mat-card-title-group>
@@ -38,7 +38,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>To Do List for {{ date1 | date:'mediumDate'}}</mat-card-title>
     </mat-card-title-group>
@@ -47,7 +47,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" >
+  <mat-card appearance="outlined" class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Current Mo. Summary As Of {{ date1 | date:'shortDate'}}</mat-card-title>
     </mat-card-title-group>
