--- a/src/app/pages/isf/parties/parties.component.html
+++ b/src/app/pages/isf/parties/parties.component.html
@@ -1,21 +1,21 @@
 <div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="20px">
-    <mat-card fxFlex="25">
+    <mat-card appearance="outlined" fxFlex="25">
         <mat-card-title>Selling Party</mat-card-title>
         <mat-card-content><app-foreign></app-foreign></mat-card-content>
       </mat-card>
       <br>
 
-      <mat-card fxFlex="25">
+      <mat-card appearance="outlined" fxFlex="25">
         <mat-card-title>Consolidator Stuffing Location</mat-card-title>
         <mat-card-content><app-foreign></app-foreign></mat-card-content>
       </mat-card>
 
-      <mat-card fxFlex="25">
+      <mat-card appearance="outlined" fxFlex="25">
         <mat-card-title>Consolidator</mat-card-title>
         <mat-card-content><app-foreign></app-foreign></mat-card-content>
       </mat-card>
 
-      <mat-card fxFlex="25">
+      <mat-card appearance="outlined" fxFlex="25">
         <mat-card-title>Importer of Record</mat-card-title>
         <mat-card-content><app-domestic></app-domestic></mat-card-content>
       </mat-card>
@@ -27,17 +27,17 @@
 
 <div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="20px">
 
-  <mat-card fxFlex="33">
+  <mat-card appearance="outlined" fxFlex="33">
     <mat-card-title>Consignee</mat-card-title>
     <mat-card-content><app-domestic></app-domestic></mat-card-content>
   </mat-card>
   <br>
-  <mat-card fxFlex="33">
+  <mat-card appearance="outlined" fxFlex="33">
     <mat-card-title>Buying Party</mat-card-title>
     <mat-card-content><app-domestic></app-domestic></mat-card-content>
   </mat-card>
   <br>
-  <mat-card fxFlex="33">
+  <mat-card appearance="outlined" fxFlex="33">
     <mat-card-title>Ship To</mat-card-title>
     <mat-card-content><app-domestic></app-domestic></mat-card-content>
   </mat-card>
