--- a/src/app/pages/trucking/trucking.component.html
+++ b/src/app/pages/trucking/trucking.component.html
@@ -14,7 +14,7 @@
 
 <router-outlet></router-outlet>
 
-<mat-card>
+<mat-card appearance="outlined">
   <mat-card-title>Air Delivery</mat-card-title>
   <mat-card-content>
     <table class="table table-info table-striped">
@@ -49,7 +49,7 @@
   </mat-card-content>
 </mat-card>
 
-<mat-card>
+<mat-card appearance="outlined">
   <mat-card-title>LCL Delivery </mat-card-title>
   <mat-card-content>
     <table class="table table-secondary table-striped">
@@ -84,7 +84,7 @@
   </mat-card-content>
 </mat-card>
 
-<mat-card> <mat-card-title>FCL Delivery</mat-card-title>
+<mat-card appearance="outlined"> <mat-card-title>FCL Delivery</mat-card-title>
   <mat-card-content>
     <table class="table table-success">
       <thead>
@@ -118,7 +118,7 @@
   </mat-card-content>
 </mat-card>
 
-<mat-card>
+<mat-card appearance="outlined">
   <mat-card-title>Special Delivery </mat-card-title>
   <mat-card-content>
     <table class="table table-primary">
