--- a/src/app/pages/trucking/trucking.component.scss
+++ b/src/app/pages/trucking/trucking.component.scss
@@ -6,10 +6,12 @@ a {
   font-size: large;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card {
   max-width: auto;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
 mat-card-content {
   max-width: 800px;
 }
