--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,7 @@ html {
   background: url(../src/assets/images/Fruits01.jpg) no-repeat center fixed;
   background-size: cover;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
